--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,11 @@
+@inproceedings{armeni_3d_2016,
+  title = {{{3D}} Semantic Parsing of Large-Scale Indoor Spaces},
+  booktitle = {Proceedings of the {{IEEE}} Conference on Computer Vision and Pattern Recognition ({{CVPR}})},
+  author = {Armeni, Iro and Sener, Ozan and Zamir, Amir R. and Jiang, Helen and Brilakis, Ioannis and Fischer, Martin and Savarese, Silvio},
+  year = {2016},
+  month = jun
+}
+
 @article{barbole_comparative_2023,
   title = {Comparative Analysis of {{2D}} and {{3D}} Vineyard Yield Prediction System Using Artificial Intelligence},
   author = {Barbole, Dhanashree and Jadhav, Parul M.},
@@ -7,6 +15,40 @@
   volume = {55},
   number = {1},
   doi = {10.4081/jae.2023.1545}
+}
+
+@article{blok_highthroughput_2025,
+  title = {High-Throughput {{3D}} Shape Completion of Potato Tubers on a Harvester},
+  author = {Blok, Pieter M. and Magistri, Federico and Stachniss, Cyrill and Wang, Haozhou and Burridge, James and Guo, Wei},
+  year = {2025},
+  month = jan,
+  journal = {Computers and Electronics in Agriculture},
+  volume = {228},
+  pages = {109673},
+  doi = {10.1016/j.compag.2024.109673}
+}
+
+@article{du_instance_2023,
+  title = {Instance {{Segmentation}} and {{Berry Counting}} of {{Table Grape}} before {{Thinning Based}} on {{AS-SwinT}}},
+  author = {Du, Wensheng and Liu, Ping},
+  year = {2023},
+  month = jan,
+  journal = {Plant Phenomics},
+  volume = {5},
+  pages = {0085},
+  doi = {10.34133/plantphenomics.0085}
+}
+
+@article{du_pst_2023,
+  title = {{{PST}}: {{Plant}} Segmentation Transformer for {{3D}} Point Clouds of Rapeseed Plants at the Podding Stage},
+  shorttitle = {{{PST}}},
+  author = {Du, Ruiming and Ma, Zhihong and Xie, Pengyao and He, Yong and Cen, Haiyan},
+  year = {2023},
+  month = jan,
+  journal = {ISPRS Journal of Photogrammetry and Remote Sensing},
+  volume = {195},
+  pages = {380--392},
+  doi = {10.1016/j.isprsjprs.2022.11.022}
 }
 
 @article{fei_comprehensive_2022,
@@ -21,6 +63,27 @@
   doi = {10.1109/TITS.2022.3195555}
 }
 
+@article{fei_comprehensive_2022a,
+  title = {Comprehensive {{Review}} of {{Deep Learning-Based 3D Point Cloud Completion Processing}} and {{Analysis}}},
+  author = {Fei, Ben and Yang, Weidong and Chen, Wen-Ming and Li, Zhijun and Li, Yikang and Ma, Tao and Hu, Xing and Ma, Lipeng},
+  year = {2022},
+  month = dec,
+  journal = {IEEE Transactions on Intelligent Transportation Systems},
+  volume = {23},
+  number = {12},
+  pages = {22862--22883},
+  doi = {10.1109/TITS.2022.3195555}
+}
+
+@misc{fei_selfsupervised_2023,
+  title = {Self-Supervised {{Learning}} for {{Pre-Training 3D Point Clouds}}: {{A Survey}}},
+  shorttitle = {Self-Supervised {{Learning}} for {{Pre-Training 3D Point Clouds}}},
+  author = {Fei, Ben and Yang, Weidong and Liu, Liwen and Luo, Tianyue and Zhang, Rui and Li, Yixuan and He, Ying},
+  year = {2023},
+  publisher = {arXiv},
+  doi = {10.48550/ARXIV.2305.04691}
+}
+
 @article{ge_symmetrybased_2020,
   title = {Symmetry-Based {{3D}} Shape Completion for Fruit Localisation for Harvesting Robots},
   author = {Ge, Yuanyue and Xiong, Ya and From, P{\aa}l J.},
@@ -32,7 +95,31 @@
   doi = {10.1016/j.biosystemseng.2020.07.003}
 }
 
-@article{jiang_3d_2019a,
+@article{ge_symmetrybased_2020a,
+  title = {Symmetry-Based {{3D}} Shape Completion for Fruit Localisation for Harvesting Robots},
+  author = {Ge, Yuanyue and Xiong, Ya and From, P{\aa}l J.},
+  year = {2020},
+  month = sep,
+  journal = {Biosystems Engineering},
+  volume = {197},
+  pages = {188--202},
+  doi = {10.1016/j.biosystemseng.2020.07.003}
+}
+
+@article{guo_deep_2021,
+  title = {Deep {{Learning}} for {{3D Point Clouds}}: {{A Survey}}},
+  shorttitle = {Deep {{Learning}} for {{3D Point Clouds}}},
+  author = {Guo, Yulan and Wang, Hanyun and Hu, Qingyong and Liu, Hao and Liu, Li and Bennamoun, Mohammed},
+  year = {2021},
+  month = dec,
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume = {43},
+  number = {12},
+  pages = {4338--4364},
+  doi = {10.1109/TPAMI.2020.3005434}
+}
+
+@article{jiang_3d_2019,
   title = {{{3D}} Point Cloud Data to Quantitatively Characterize Size and Shape of Shrub Crops},
   author = {Jiang, Yu and Li, Changying and Takeda, Fumiomi and Kramer, Elizabeth A. and Ashrafi, Hamid and Hunter, Jamal},
   year = {2019},
@@ -55,6 +142,31 @@
   doi = {10.1016/j.compag.2023.108439}
 }
 
+@article{li_maspc_2022,
+  title = {{{MASPC}}\_{{Transform}}: {{A Plant Point Cloud Segmentation Network Based}} on {{Multi-Head Attention Separation}} and {{Position Code}}},
+  shorttitle = {{{MASPC}}\_{{Transform}}},
+  author = {Li, Bin and Guo, Chenhua},
+  year = {2022},
+  month = nov,
+  journal = {Sensors},
+  volume = {22},
+  number = {23},
+  pages = {9225},
+  doi = {10.3390/s22239225}
+}
+
+@article{li_psegnet_2022,
+  title = {{{PSegNet}}: {{Simultaneous Semantic}} and {{Instance Segmentation}} for {{Point Clouds}} of {{Plants}}},
+  shorttitle = {{{PSegNet}}},
+  author = {Li, Dawei and Li, Jinsheng and Xiang, Shiyu and Pan, Anqi},
+  year = {2022},
+  month = jan,
+  journal = {Plant Phenomics},
+  volume = {2022},
+  pages = {2022/9787643},
+  doi = {10.34133/2022/9787643}
+}
+
 @article{li_review_2020,
   title = {A Review of Computer Vision Technologies for Plant Phenotyping},
   author = {Li, Zhenbo and Guo, Ruohao and Li, Meng and Chen, Yaru and Li, Guangyao},
@@ -66,7 +178,18 @@
   doi = {10.1016/j.compag.2020.105672}
 }
 
-@article{luo_prediction_2024a,
+@article{luo_infield_2022,
+  title = {In-Field Pose Estimation of Grape Clusters with Combined Point Cloud Segmentation and Geometric Analysis},
+  author = {Luo, Lufeng and Yin, Wei and Ning, Zhengtong and Wang, Jinhai and Wei, Huiling and Chen, Weilin and Lu, Qinghua},
+  year = {2022},
+  month = sep,
+  journal = {Computers and Electronics in Agriculture},
+  volume = {200},
+  pages = {107197},
+  doi = {10.1016/j.compag.2022.107197}
+}
+
+@article{luo_prediction_2024,
   title = {Prediction of the {{Harvest Time}} of {{Cabernet Sauvignon Grapes Using Near-Infrared Spectroscopy}}},
   author = {Luo, Yijia and Zhao, Jingrui and Zhu, He and Li, Xiaohan and Dong, Juan and Sun, Jingtao},
   year = {2024},
@@ -74,6 +197,31 @@
   journal = {Spectroscopy},
   pages = {18--27},
   doi = {10.56530/spectroscopy.jh1773v4}
+}
+
+@article{magistri_contrastive_2022,
+  title = {Contrastive {{3D Shape Completion}} and {{Reconstruction}} for {{Agricultural Robots Using RGB-D Frames}}},
+  author = {Magistri, Federico and Marks, Elias and Nagulavancha, Sumanth and Vizzo, Ignacio and Labe, Thomas and Behley, Jens and Halstead, Michael and McCool, Chris and Stachniss, Cyrill},
+  year = {2022},
+  month = oct,
+  journal = {IEEE Robotics and Automation Letters},
+  volume = {7},
+  number = {4},
+  pages = {10120--10127},
+  doi = {10.1109/LRA.2022.3193239}
+}
+
+@inproceedings{magistri_efficient_2024,
+  title = {Efficient and {{Accurate Transformer-Based 3D Shape Completion}} and {{Reconstruction}} of {{Fruits}} for {{Agricultural Robots}}},
+  booktitle = {2024 {{IEEE International Conference}} on {{Robotics}} and {{Automation}} ({{ICRA}})},
+  author = {Magistri, Federico and Marcuzzi, Rodrigo and Marks, Elias and Sodano, Matteo and Behley, Jens and Stachniss, Cyrill},
+  year = {2024},
+  month = may,
+  pages = {8657--8663},
+  publisher = {IEEE},
+  address = {Yokohama, Japan},
+  doi = {10.1109/ICRA57147.2024.10611717},
+  isbn = {979-8-3503-8457-4}
 }
 
 @inproceedings{marangoz_fruit_2022,
@@ -100,6 +248,33 @@
   doi = {10.1016/j.isprsjprs.2020.11.010}
 }
 
+@inproceedings{pan_panoptic_2023,
+  title = {Panoptic {{Mapping}} with {{Fruit Completion}} and {{Pose Estimation}} for {{Horticultural Robots}}},
+  booktitle = {2023 {{IEEE}}/{{RSJ International Conference}} on {{Intelligent Robots}} and {{Systems}} ({{IROS}})},
+  author = {Pan, Yue and Magistri, Federico and L{\"a}be, Thomas and Marks, Elias and Smitt, Claus and McCool, Chris and Behley, Jens and Stachniss, Cyrill},
+  year = {2023},
+  month = oct,
+  pages = {4226--4233},
+  publisher = {IEEE},
+  address = {Detroit, MI, USA},
+  doi = {10.1109/IROS55552.2023.10342067},
+  isbn = {978-1-6654-9190-7}
+}
+
+@inproceedings{park_deepsdf_2019,
+  title = {{{DeepSDF}}: {{Learning Continuous Signed Distance Functions}} for {{Shape Representation}}},
+  shorttitle = {{{DeepSDF}}},
+  booktitle = {2019 {{IEEE}}/{{CVF Conference}} on {{Computer Vision}} and {{Pattern Recognition}} ({{CVPR}})},
+  author = {Park, Jeong Joon and Florence, Peter and Straub, Julian and Newcombe, Richard and Lovegrove, Steven},
+  year = {2019},
+  month = jun,
+  pages = {165--174},
+  publisher = {IEEE},
+  address = {Long Beach, CA, USA},
+  doi = {10.1109/CVPR.2019.00025},
+  isbn = {978-1-7281-3293-8}
+}
+
 @article{raihen_prediction_2024,
   title = {Prediction Modeling Using Deep Learning for the Classification of Grape-Type Dried Fruits},
   author = {Raihen, Md Nurul and Akter, Sultana},
@@ -124,7 +299,7 @@
   doi = {10.3390/s18030763}
 }
 
-@article{rose_automated_2016a,
+@article{rose_automated_2016,
   title = {Towards {{Automated Large-Scale 3D Phenotyping}} of {{Vineyards}} under {{Field Conditions}}},
   author = {Rose, Johann and Kicherer, Anna and Wieland, Markus and Klingbeil, Lasse and T{\"o}pfer, Reinhard and Kuhlmann, Heiner},
   year = {2016},
@@ -134,6 +309,18 @@
   number = {12},
   pages = {2136},
   doi = {10.3390/s16122136}
+}
+
+@article{rostami_survey_2019,
+  title = {A {{Survey}} on {{Data}}-{{Driven 3D Shape Descriptors}}},
+  author = {Rostami, R. and Bashiri, F. S. and Rostami, B. and Yu, Z.},
+  year = {2019},
+  month = feb,
+  journal = {Computer Graphics Forum},
+  volume = {38},
+  number = {1},
+  pages = {356--393},
+  doi = {10.1111/cgf.13536}
 }
 
 @article{schneider_predicting_2020,
@@ -170,6 +357,110 @@
   doi = {10.1007/s42979-023-02572-9}
 }
 
+@article{su_point_2023,
+  title = {Point Cloud Completion via Structured Feature Maps Using a Feedback Network},
+  author = {Su, Zejia and Huang, Haibin and Ma, Chongyang and Huang, Hui and Hu, Ruizhen},
+  year = {2023},
+  month = mar,
+  journal = {Computational Visual Media},
+  volume = {9},
+  number = {1},
+  pages = {71--85},
+  doi = {10.1007/s41095-022-0276-6}
+}
+
+@inproceedings{tang_lakenet_2022,
+  title = {{{LAKe-net}}: {{Topology-aware}} Point Cloud Completion by Localizing Aligned Keypoints},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} Conference on Computer Vision and Pattern Recognition ({{CVPR}})},
+  author = {Tang, Junshu and Gong, Zhijun and Yi, Ran and Xie, Yuan and Ma, Lizhuang},
+  year = {2022},
+  month = jun,
+  pages = {1726--1735}
+}
+
+@inproceedings{tchapmi_topnet_2019,
+  title = {{{TopNet}}: {{Structural}} Point Cloud Decoder},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} Conference on Computer Vision and Pattern Recognition ({{CVPR}})},
+  author = {Tchapmi, Lyne P. and Kosaraju, Vineet and Rezatofighi, Hamid and Reid, Ian and Savarese, Silvio},
+  year = {2019},
+  month = jun
+}
+
+@article{tesema_point_2024,
+  title = {Point {{Cloud Completion}}: {{A Survey}}},
+  shorttitle = {Point {{Cloud Completion}}},
+  author = {Tesema, Keneni W. and Hill, Lyndon and Jones, Mark W. and Ahmad, Muneeb I. and Tam, Gary K.L.},
+  year = {2024},
+  month = oct,
+  journal = {IEEE Transactions on Visualization and Computer Graphics},
+  volume = {30},
+  number = {10},
+  pages = {6880--6899},
+  doi = {10.1109/TVCG.2023.3344935}
+}
+
+@inproceedings{tolstikhin_mlpmixer_2021,
+  title = {{{MLP-mixer}}: {{An}} All-{{MLP}} Architecture for Vision},
+  booktitle = {Advances in Neural Information Processing Systems},
+  author = {Tolstikhin, Ilya O and Houlsby, Neil and Kolesnikov, Alexander and Beyer, Lucas and Zhai, Xiaohua and Unterthiner, Thomas and Yung, Jessica and Steiner, Andreas and Keysers, Daniel and Uszkoreit, Jakob and Lucic, Mario and Dosovitskiy, Alexey},
+  editor = {Ranzato, M. and Beygelzimer, A. and Dauphin, Y. and Liang, P.S. and Vaughan, J. Wortman},
+  year = {2021},
+  volume = {34},
+  pages = {24261--24272},
+  publisher = {Curran Associates, Inc.}
+}
+
+@inproceedings{vaswani_attention_2017,
+  title = {Attention Is All You Need},
+  booktitle = {Advances in Neural Information Processing Systems},
+  author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  editor = {Guyon, I. and Luxburg, U. Von and Bengio, S. and Wallach, H. and Fergus, R. and Vishwanathan, S. and Garnett, R.},
+  year = {2017},
+  volume = {30},
+  publisher = {Curran Associates, Inc.}
+}
+
+@inproceedings{vu_softgroup_2022,
+  title = {{{SoftGroup}} for {{3D}} Instance Segmentation on Point Clouds},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} Conference on Computer Vision and Pattern Recognition ({{CVPR}})},
+  author = {Vu, Thang and Kim, Kookhoi and Luu, Tung M. and Nguyen, Thanh and Yoo, Chang D.},
+  year = {2022},
+  month = jun,
+  pages = {2708--2717},
+  doi = {10.48550/arXiv.2203.01509}
+}
+
+@inproceedings{wang_3d_2022,
+  title = {{{3D}} Point Cloud Instance Segmentation of Lettuce Based on {{PartNet}}},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} Conference on Computer Vision and Pattern Recognition ({{CVPR}}) Workshops},
+  author = {Wang, Luhan and Zheng, Lihua and Wang, Minjuan},
+  year = {2022},
+  month = jun,
+  pages = {1647--1655}
+}
+
+@article{wang_dynamic_2019,
+  title = {Dynamic {{Graph CNN}} for {{Learning}} on {{Point Clouds}}},
+  author = {Wang, Yue and Sun, Yongbin and Liu, Ziwei and Sarma, Sanjay E. and Bronstein, Michael M. and Solomon, Justin M.},
+  year = {2019},
+  month = oct,
+  journal = {ACM Transactions on Graphics},
+  volume = {38},
+  number = {5},
+  pages = {1--12},
+  doi = {10.1145/3326362}
+}
+
+@inproceedings{wang_unsupervised_2021,
+  title = {Unsupervised Point Cloud Pre-Training via Occlusion Completion},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} International Conference on Computer Vision ({{ICCV}})},
+  author = {Wang, Hanchen and Liu, Qi and Yue, Xiangyu and Lasenby, Joan and Kusner, Matt J.},
+  year = {2021},
+  month = oct,
+  pages = {9782--9792},
+  doi = {10.48550/arXiv.2010.01089}
+}
+
 @article{xiang_multispace_2023,
   title = {Multi-Space and Detail-Supplemented Attention Network for Point Cloud Completion},
   author = {Xiang, Min and Ye, Hailiang and Yang, Bing and Cao, Feilong},
@@ -180,6 +471,63 @@
   number = {12},
   pages = {14971--14985},
   doi = {10.1007/s10489-022-04219-3}
+}
+
+@inproceedings{xiang_snowflakenet_2021,
+  title = {{{SnowflakeNet}}: {{Point}} Cloud Completion by Snowflake Point Deconvolution with Skip-Transformer},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} International Conference on Computer Vision ({{ICCV}})},
+  author = {Xiang, Peng and Wen, Xin and Liu, Yu-Shen and Cao, Yan-Pei and Wan, Pengfei and Zheng, Wen and Han, Zhizhong},
+  year = {2021},
+  month = oct,
+  pages = {5499--5509},
+  doi = {10.48550/arXiv.2108.04444}
+}
+
+@incollection{xie_grnet_2020,
+  title = {{{GRNet}}: {{Gridding Residual Network}} for {{Dense Point Cloud Completion}}},
+  shorttitle = {{{GRNet}}},
+  booktitle = {Computer {{Vision}} -- {{ECCV}} 2020},
+  author = {Xie, Haozhe and Yao, Hongxun and Zhou, Shangchen and Mao, Jiageng and Zhang, Shengping and Sun, Wenxiu},
+  editor = {Vedaldi, Andrea and Bischof, Horst and Brox, Thomas and Frahm, Jan-Michael},
+  year = {2020},
+  volume = {12354},
+  pages = {365--381},
+  publisher = {Springer International Publishing},
+  address = {Cham},
+  doi = {10.1007/978-3-030-58545-7_21},
+  isbn = {978-3-030-58544-0 978-3-030-58545-7}
+}
+
+@inproceedings{yang_pointflow_2019,
+  title = {{{PointFlow}}: {{3D}} Point Cloud Generation with Continuous Normalizing Flows},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} International Conference on Computer Vision ({{ICCV}})},
+  author = {Yang, Guandao and Huang, Xun and Hao, Zekun and Liu, Ming-Yu and Belongie, Serge and Hariharan, Bharath},
+  year = {2019},
+  month = oct
+}
+
+@inproceedings{yu_pointr_2021,
+  title = {{{PoinTr}}: {{Diverse}} Point Cloud Completion with Geometry-Aware Transformers},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} International Conference on Computer Vision ({{ICCV}})},
+  author = {Yu, Xumin and Rao, Yongming and Wang, Ziyi and Liu, Zuyan and Lu, Jiwen and Zhou, Jie},
+  year = {2021},
+  month = oct,
+  pages = {12498--12507},
+  doi = {10.48550/arXiv.2108.08839}
+}
+
+@inproceedings{yuan_pcn_2018,
+  title = {{{PCN}}: {{Point Completion Network}}},
+  shorttitle = {{{PCN}}},
+  booktitle = {2018 {{International Conference}} on {{3D Vision}} ({{3DV}})},
+  author = {Yuan, Wentao and Khot, Tejas and Held, David and Mertz, Christoph and Hebert, Martial},
+  year = {2018},
+  month = sep,
+  pages = {728--737},
+  publisher = {IEEE},
+  address = {Verona},
+  doi = {10.1109/3DV.2018.00088},
+  isbn = {978-1-5386-8425-2}
 }
 
 @article{zabawa_counting_2020,
